add io part